--- a/styles.css
+++ b/styles.css
@@ -19,8 +19,8 @@ body {
 header {
   background: #ffffff;
   color: rgb(0, 0, 0);
-  padding: 2rem;
   text-align: center;
+  padding: 2em;
 }
 
 /* Navigation */
